19/11/2014 lpNet package has been updated for the use with time series data 
17/12/2014 updated the doILP functions, allowing for faster run times
29/12/2014 updated vignette to include prior data from KEGG, and added a new variation of doILP_steadyState