@@ -1,7 +1,7 @@
 Package: lpNet
 Type: Package
 Title: Linear Programming Model for Network Inference
-Version: 2.1.0
+Version: 2.1.1
 Date: 2014-09-24
 Author: Bettina Knapp, Marta R. A. Matos, Johanna Mazur, Lars Kaderali
 Maintainer: Bettina Knapp <bettina.knapp@tu-dresden.de>
